# FastApi-Basic

./: .gitignore  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: ae8e7a75c865_first_migration.py
api/: courses.py  sections.py  users.py
api/utils/: courses.py  users.py
db/: db_setup.py
db/models/: mixins.py  user.py
pydantic_schema/: course.py  user.py
