[tool.poetry]
name = "fastapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.19.0"
pydantic = "^1.10.2"
sqlalchemy = "^1.4.43"
psycopg2-binary = "^2.9.5"
python-dotenv = "^0.21.0"
sqlalchemy-utils = "^0.38.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
